--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ nav{
 }
 
 .faq{
-    height: 100vh;
+    height: 130vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -211,6 +211,7 @@ nav{
 }
 
 .childplus{
+    cursor: pointer;
     font-family: netflix-sans-regular;
     font-size: 50px;
     margin-right: 20px;
@@ -227,7 +228,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 45vh;
+    height: 60vh;
     background-color: black;
     border-top: 8px solid #242424
 }
